--- a/HealthCatalystPeopleSearch/Views/Shared/_Layout.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
                         <a class="page-scroll" href="#one">Begin Searching</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#two">Highlights</a>
+                        <a class="page-scroll" href="#two">Enter Person</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#three">Gallery</a>
+                        <a class="page-scroll" href="#three">Reseed</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#four">Features</a>
@@ -77,34 +77,51 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">Flexible Layouts</h2>
+                    <h2 class="margin-top-0 text-primary">Enter Person</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Responsive</h3>
-                        <p class="text-muted">Your site looks good everywhere</p>
+        <div class="div-force-center">
+            <div class="col-centered">
+                <form class="contact-form row ">
+                    <div class="col-md-12">
+                        <label></label>
+                        <input type="text" class="form-control" placeholder="First Name">
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
-                        <h3>Customizable</h3>
-                        <p class="text-muted">Easy to theme and customize with SASS</p>
+                    <div class="col-md-12">
+                        <label></label>
+                        <input type="text" class="form-control" placeholder="Last Name">
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Consistent</h3>
-                        <p class="text-muted">A mature, well-tested, stable codebase</p>
+                    <div class="col-md-12">
+                        <label></label>
+                        <input type="text" class="form-control" placeholder="Address">
                     </div>
-                </div>
+                    <div class="col-md-12">
+                        <label></label>
+                        <input type="text" class="form-control" placeholder="City">
+                    </div>
+                    <div class="col-md-12">
+                        <label></label>
+                        <input type="text" class="form-control" placeholder="State">
+                    </div>
+                    <div class="col-md-12">
+                        <label></label>
+                        <input type="text" class="form-control" placeholder="Zip">
+                    </div>
+                    <div class="col-md-12">
+                        <label></label>
+                        <input type="text" class="form-control" placeholder="Age">
+                    </div>
+                    <div class="col-md-12">
+                        <label></label>
+                        <textarea class="form-control" rows="9" placeholder="Interests..."></textarea>
+                    </div>
+                    <div class="col-md-12">
+                        <label></label>
+                        <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Add Person <i class="ion-android-arrow-forward"></i></button>
+                    </div>
+                </form>
             </div>
         </div>
     </section>
@@ -368,19 +385,18 @@
         </div>
     </div>
     <div id="aboutModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog override-modal">
             <div class="modal-content">
                 <div class="modal-body">
-                    <h2 class="text-center">Landing Zero Theme</h2>
+                    <h2 class="text-center">About</h2>
                     <h5 class="text-center">
-                        A free, responsive landing page theme built by BootstrapZero.
+                        
                     </h5>
                     <p class="text-justify">
-                        This is a single-page Bootstrap template with a sleek dark/grey color scheme, accent color and smooth scrolling.
-                        There are vertical content sections with subtle animations that are activated when scrolled into view using the jQuery WOW plugin. There is also a gallery with modals
-                        that work nicely to showcase your work portfolio. Other features include a contact form, email subscribe form, multi-column footer. Uses Questrial Google Font and Ionicons.
+                        This page is a heavily hacked mix-up of 'Landing Zero Theme', a free, responsive theme by BootstrapZero and Twitter Type ahead.  
                     </p>
-                    <p class="text-center"><a href="http://www.bootstrapzero.com">Download at BootstrapZero</a></p>
+                    <p class="text-center"><a target="_blank" href="http://www.bootstrapzero.com">Download at BootstrapZero</a></p>
+                    <p class="text-center"><a target="_blank" href="http://twitter.github.io/typeahead.js/">Download on Github</a></p>
                     <br />
                     <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true"> OK </button>
                 </div>
