--- a/HealthCatalystPeopleSearch/Views/Shared/_Layout.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Shared/_Layout.cshtml
@@ -64,19 +64,6 @@
             </div>
         </div>
     </footer>
-    <div id="galleryModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <img src="//placehold.it/1200x700/222?text=..." id="galleryImage" class="img-responsive" />
-                    <p>
-                        <br />
-                        <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">Close <i class="ion-android-close"></i></button>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
     <div id="aboutModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog override-modal">
             <div class="modal-content">
@@ -110,6 +97,20 @@
             </div>
         </div>
     </div>
+    <div id="viewModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-sm override-modal">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h2 class="text-center">Person</h2>
+                    @Html.Action("LoadPerson", "Home")
+                    <br />
+                    <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">OK <i class="ion-checkmark"></i></button>
+                    <br />
+                    <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">Cancel <i class="ion-close"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--scripts loaded here from cdn for performance -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -123,9 +124,10 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $('input.search-input').typeahead({
-		        name: 'accounts',
-		        local: ['Audi', 'BMW', 'Bugatti', 'Ferrari', 'Ford', 'Lamborghini', 'Mercedes Benz', 'Porsche', 'Rolls-Royce', 'Volkswagen']
-	        });
+                name: 'names',
+                prefetch: 'GetNames',
+                limit: 500
+            });
         });
     </script>
 </body>
