--- a/HealthCatalystPeopleSearch/Views/Home/AddPerson.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Home/AddPerson.cshtml
@@ -1,22 +1,20 @@
 ﻿@model HealthCatalystPeopleSearch.Models.Person
 
 
-@using (Html.BeginForm("AddPerson","Home", FormMethod.Post)) 
+@using (Ajax.BeginForm("AddPerson","Home", null, new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "PeopleGridDiv", OnComplete = "PersonAdded" }, new { enctype = "multipart/form-data", id = "formAddPerson" }))
 {
-    @Html.AntiForgeryToken()
-    
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @placeholder = "First Name" } })
-                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.FirstName, "First Name Required", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Last Name" } })
-                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.LastName, "Last Name Required", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -71,7 +69,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-12">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button id="submitAddPerson" type="submit" class="btn btn-default">Create</button>
             </div>
         </div>
     </div>
