--- a/HealthCatalystPeopleSearch/Views/Home/Index.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model HealthCatalystPeopleSearch.Models.Home
+@{
     ViewBag.Title = "Health Catalyst Person Search";
 }
 
@@ -31,7 +32,7 @@
     </div>
     <div class="div-force-center">
         <div class="col-centered">
-            @{Html.RenderPartial("AddPerson");}
+            @{Html.RenderPartial("AddPerson", new HealthCatalystPeopleSearch.Models.Person());}
         </div>
     </div>
 </section>
@@ -40,7 +41,9 @@
         <div>
             <h2 class="text-center text-primary">These are the People in the Database</h2>
             <hr>
-            @Html.Action("PeopleGrid", "Home")
+            <div id="PeopleGridDiv">
+                @{Html.RenderPartial("PeopleGrid", Model.persons);}
+            </div>
         </div>
         <div class="col-md-12">
             <label></label>
