--- a/HealthCatalystPeopleSearch/Views/Home/Index.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-12">
             <label></label>
-            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Reseed <i class="ion-android-arrow-forward"></i></button>
+            <button type="button" data-toggle="modal" data-target="#reseedModal" class="btn btn-primary btn-block btn-lg">Reseed <i class="ion-android-arrow-forward"></i></button>
         </div>
     </div>
 </section>
