--- a/HealthCatalystPeopleSearch/Views/Home/AddPerson.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Home/AddPerson.cshtml
@@ -4,7 +4,7 @@
 @using (Ajax.BeginForm("AddPerson","Home", null, new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "PeopleGridDiv", OnComplete = "PersonAdded" }, new { enctype = "multipart/form-data", id = "formAddPerson" }))
 {
     <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "Errors were found", new { @class = "text-danger" })
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @placeholder = "First Name" } })
@@ -20,51 +20,43 @@
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control", @placeholder = "Address" } })
-                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control", @placeholder = "City" } })
-                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.State, new { htmlAttributes = new { @class = "form-control", @placeholder = "State" } })
-                @Html.ValidationMessageFor(model => model.State, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.Zip, new { htmlAttributes = new { @class = "form-control", @placeholder = "Zip" } })
-                @Html.ValidationMessageFor(model => model.Zip, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.Age, new { htmlAttributes = new { @class = "form-control", @placeholder = "Age" } })
-                @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.PicName, new { htmlAttributes = new { @class = "form-control", @placeholder = "PicName" } })
-                @Html.ValidationMessageFor(model => model.PicName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.PicLocation, new { htmlAttributes = new { @class = "form-control", @placeholder = "PicLocation" } })
-                @Html.ValidationMessageFor(model => model.PicLocation, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-12">
                 @Html.EditorFor(model => model.Interests, new { htmlAttributes = new { @class = "form-control", @placeholder = "Interests" } })
-                @Html.ValidationMessageFor(model => model.Interests, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
