--- a/HealthCatalystPeopleSearch/Views/Home/LoadPerson.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Home/LoadPerson.cshtml
@@ -1,6 +1,7 @@
 ﻿@model HealthCatalystPeopleSearch.Models.Person
 
 <div id="personResults">
+    <h2 class="text-center">Person</h2>
     <table class="table">
         <tr>
             <td>@Html.DisplayNameFor(model => model.FirstName)</td>
@@ -47,4 +48,6 @@
             <td>@Html.DisplayFor(modelItem => Model.Interests)</td>
         </tr>
     </table>
+    <br />
+    <button id="submitLoadPerson" class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">OK <i class="ion-checkmark"></i></button>
 </div>
