--- a/HealthCatalystPeopleSearch/Views/Shared/_Layout.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Shared/_Layout.cshtml
@@ -90,14 +90,14 @@
             </div>
         </div>
     </div>
-    <div id="alertModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+    <div id="reseedModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-sm override-modal">
             <div class="modal-content">
                 <div class="modal-body">
                     <h2 class="text-center">Wait!</h2>
                     <p class="text-center">Are you sure you want to reseed the data?  It will erase any changes you've made.</p>
                     <br />
-                    <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">OK <i class="ion-checkmark"></i></button>
+                    <button id="reseedData" class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">OK <i class="ion-checkmark"></i></button>
                     <br />
                     <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">Cancel <i class="ion-close"></i></button>
                 </div>
@@ -108,12 +108,10 @@
         <div class="modal-dialog modal-sm override-modal">
             <div class="modal-content">
                 <div class="modal-body">
-                    <h2 class="text-center">Person</h2>
                     @Html.Action("LoadPerson", "Home")
-                    <br />
-                    <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">OK <i class="ion-checkmark"></i></button>
-                    <br />
-                    <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">Cancel <i class="ion-close"></i></button>
+                    <div id="loadingModal">
+                        <h2 class="text-center"><img src="~/Content/Images/spinner.gif" alt="Loading, please wait..." /></h2>
+                    </div>
                 </div>
             </div>
         </div>
@@ -135,6 +133,5 @@
         });
     </script>
 </body>
-
    
 </html>
