--- a/HealthCatalystPeopleSearch/Views/Home/AddPerson.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Home/AddPerson.cshtml
@@ -44,19 +44,13 @@
         </div>
         <div class="form-group">
             <div class="col-md-12">
-                @Html.EditorFor(model => model.PicName, new { htmlAttributes = new { @class = "form-control", @placeholder = "PicName" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-12">
-                @Html.EditorFor(model => model.PicLocation, new { htmlAttributes = new { @class = "form-control", @placeholder = "PicLocation" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-12">
                 @Html.EditorFor(model => model.Interests, new { htmlAttributes = new { @class = "form-control", @placeholder = "Interests" } })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-12">
+                <input type="file" id="file1" name="file1" />
+                @*@Html.TextBoxFor(model => model.Photo, new { type = "file", id = "file1", name = "file1" })*@
             </div>
         </div>
         <div class="form-group">
