--- a/HealthCatalystPeopleSearch/Views/Home/PeopleGrid.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Home/PeopleGrid.cshtml
@@ -12,7 +12,7 @@
                 <th>Zip</th>
                 <th>Age</th>
                 <th>Interests</th>
-                <th>Image Location</th>
+                <th>Photo</th>
                 <th></th>
             </tr>
         </thead>
@@ -29,7 +29,7 @@
                     <td>@item.Zip</td>
                     <td>@item.Age</td>
                     <td>@item.Interests</td>
-                    <td>@item.PicLocation</td>
+                    <td>@*@item.Photo*@</td>
                     <td>
                         <button name="DeletePerson" type="button" class="btn btn-default" data-id="@item.PersonId">Delete</button>
                     </td>
