--- a/HealthCatalystPeopleSearch/Views/Shared/_Layout.cshtml
+++ b/HealthCatalystPeopleSearch/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@
                 <div class="modal-body">
                     @Html.Action("LoadPerson", "Home")
                     <div id="loadingModal">
-                        <h2 class="text-center"><img src="~/Content/Images/spinner.gif" alt="Loading, please wait..." /></h2>
+                        <h2 class="text-center"><img src="~/Content/Images/spinner.gif" alt="Loading, please wait..." />Loading...</h2>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $('input.search-input').typeahead({
-                name: 'names',
+                //name: 'names',
                 prefetch: 'GetNames',
                 limit: 500
             });
